public abstract class Shape {
    abstract void draw();
    abstract void erase();
}
